<resources>
    <string name="app_name">LogIn</string>
    <string name="login_to_app">LOGIN to APP</string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confrm Password</string>
    <string name="remember_me">Remember me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
